--- a/css/style.css
+++ b/css/style.css
@@ -55,4 +55,21 @@ body {
 	text-align: center;
 	padding: 3.25rem;
 	background-color: var(--clr-neutral-darker);
+	border-radius: 1rem;
+}
+
+.advice-heading {
+	color: var(--clr-secondary);
+	font-weight: 600;
+	text-transform: uppercase;
+	font-size: 0.875rem;
+	letter-spacing: 5px;
+	margin-bottom: 1.3125rem;
+}
+
+.advice-text {
+	font-size: 1.75rem;
+	font-weight: 800;
+	line-height: 1.4;
+	margin-bottom: 2.5rem;
 }
