--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,14 @@ body {
 	filter: drop-shadow(0 0 1rem var(--clr-secondary));
 }
 
+.btn-getquote:disabled {
+	background-color: var(--clr-neutral);
+}
+
+.btn-getquote:disabled:hover {
+	filter: none;
+}
+
 @media (max-width: 37.5rem) {
 	.card {
 		padding: 2.75rem 1.75rem 4rem 1.75rem;
